Fixed misaligned chevrons

--- a/src/css/modules/_card-work.scss
+++ b/src/css/modules/_card-work.scss
@@ -65,13 +65,12 @@
             a {
                 & i {
                     display: inline-block;
-                    transform: translate(0, 1px);
                     transition: .3s transform;
                 }
 
                 &:hover {
                     & i {
-                        transform: translate(3px, 1px);
+                        transform: translateX(3px);
                     }
                 }
             }
